fix header overlap

--- a/acdumo/static/style.css
+++ b/acdumo/static/style.css
@@ -1,6 +1,6 @@
 
 body {
-  padding-top: 6rem;
+  padding-top: 10rem;
   max-width: 48rem;
   margin: auto;
 }
